--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/validator": "^13.7.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.7",
     "typescript": "^4.7.4",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
